<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>knee_rehab_py_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="joe@todo.todo">joe</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>socket</depend>
  <depend>time</depend>
  <depend>threading</depend>
  <depend>subprocess</depend>
  <depend>logging</depend>
  <depend>pexpect</depend>
  <depend>re</depend>
  <depend>RPi.GPIO</depend>
  <depend>knee_rehab_interfaces</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
